--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.fanlychie</groupId>
-    <artifactId>reflection</artifactId>
-    <version>1.0</version>
+    <artifactId>jreflect</artifactId>
+    <version>1.1</version>
     <packaging>jar</packaging>
-    <name>reflection</name>
+    <name>jreflect</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
