--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.fanlychie</groupId>
     <artifactId>jreflect</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0beta</version>
     <packaging>jar</packaging>
     <name>jreflect</name>
     <url>http://maven.apache.org</url>
